<resources>
    <string name="app_name">CalendarPro</string>

    <string name="year">年</string>
    <string name="month">月</string>
    <string name="week">周</string>
    <string name="day">日</string>
    <string name="today">今</string>

    <string name="plan">工作计划</string>

    <string name="menu_today">今天</string>
    <string name="menu_plan">计划</string>

    <string name="week_01">日</string>
    <string name="week_02">一</string>
    <string name="week_03">二</string>
    <string name="week_04">三</string>
    <string name="week_05">四</string>
    <string name="week_06">五</string>
    <string name="week_07">六</string>
</resources>
